--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aula-dio",
   "version": "1.0.0",
-  "description": "",
+  "description": "*Bem vindo!!*",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,5 +15,13 @@
   },
   "devDependencies": {
     "typescript": "^4.3.5"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Magno12/mentoria-typescript.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Magno12/mentoria-typescript/issues"
+  },
+  "homepage": "https://github.com/Magno12/mentoria-typescript#readme"
 }
