--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lite-server": "^2.6.1"
   },
   "devDependencies": {
+    "@types/node": "^18.0.6",
     "typescript": "^4.3.5"
   },
   "repository": {
